--- a/index.html
+++ b/index.html
@@ -105,8 +105,23 @@
     </header>
     <!-- !start #header -->
 
-    <!-- start #main-site -->
-    <main></main>
+    <main id="main-site">
+      <!-- Owl-carousel -->
+      <section id="banner-area">
+        <div class="owl-carousel owl-theme">
+          <div class="item">
+            <img src="./assets/Banner1.png" alt="Banner1" />
+          </div>
+          <div class="item">
+            <img src="./assets/Banner2.png" alt="Banner2" />
+          </div>
+          <div class="item">
+            <img src="./assets/Banner1.png" alt="Banner3" />
+          </div>
+        </div>
+      </section>
+      <!-- !Owl-carousel -->
+    </main>
     <!-- !start #main-site -->
 
     <!-- start #footer -->
@@ -128,5 +143,15 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Owl Carousel Js file -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+      integrity="sha256-pTxD+DSzIwmwhOqTFN+DB+nHjO4iAsbgfyFq5K5bcE0="
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Custom Javascript -->
+    <script src="./index.js"></script>
   </body>
 </html>
