--- a/HTML Templete/cart.html
+++ b/HTML Templete/cart.html
@@ -119,7 +119,7 @@
               <div class="row border-top py-3 mt-3">
                 <div class="col-sm-2">
                   <img
-                    src="./assets/products/1.png"
+                    src="../assets/products/1.png"
                     style="height: 120px"
                     alt="cart1"
                     class="img-fluid"
@@ -185,7 +185,7 @@
               <div class="row border-top py-3 mt-3">
                 <div class="col-sm-2">
                   <img
-                    src="./assets/products/2.png"
+                    src="../assets/products/2.png"
                     style="height: 120px"
                     alt="cart1"
                     class="img-fluid"
@@ -286,7 +286,7 @@
               <div class="product font-rale">
                 <a href="#"
                   ><img
-                    src="./assets/products/1.png"
+                    src="../assets/products/1.png"
                     alt="product1"
                     class="img-fluid"
                 /></a>
@@ -312,7 +312,7 @@
               <div class="product font-rale">
                 <a href="#"
                   ><img
-                    src="./assets/products/2.png"
+                    src="../assets/products/2.png"
                     alt="product1"
                     class="img-fluid"
                 /></a>
@@ -338,7 +338,7 @@
               <div class="product font-rale">
                 <a href="#"
                   ><img
-                    src="./assets/products/3.png"
+                    src="../assets/products/3.png"
                     alt="product1"
                     class="img-fluid"
                 /></a>
@@ -364,7 +364,7 @@
               <div class="product font-rale">
                 <a href="#"
                   ><img
-                    src="./assets/products/6.png"
+                    src="../assets/products/6.png"
                     alt="product1"
                     class="img-fluid"
                 /></a>
@@ -390,7 +390,7 @@
               <div class="product font-rale">
                 <a href="#"
                   ><img
-                    src="./assets/products/1.png"
+                    src="../assets/products/1.png"
                     alt="product1"
                     class="img-fluid"
                 /></a>
@@ -417,7 +417,7 @@
                 <div class="d-flex flex-column">
                   <a href="#"
                     ><img
-                      src="./assets/products/1.png"
+                      src="../assets/products/1.png"
                       class="img-fluid"
                       alt="pro1"
                   /></a>
@@ -445,7 +445,7 @@
                 <div class="d-flex flex-column">
                   <a href="#"
                     ><img
-                      src="./assets/products/2.png"
+                      src="../assets/products/2.png"
                       class="img-fluid"
                       alt="pro1"
                   /></a>
@@ -576,6 +576,6 @@
     ></script>
 
     <!-- Custom Javascript -->
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
