--- a/HTML Templete/index.html
+++ b/HTML Templete/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mobile Ki Dukaan</title>
+    <title>Mobile Shopee</title>
 
     <!-- Bootstrap CDN -->
     <link
@@ -43,8 +43,8 @@
     <header id="header">
       <div class="strip d-flex justify-content-between px-4 py-1 bg-light">
         <p class="font-rale font-size-12 text-black-50 m-0">
-          Shop No.420, Meena Bazaar, Jama Masjid, Chandni Chowk, New Delhi,
-          Delhi 110006.
+          Jordan Calderon 430-985 Eleifend St. Duluth Washington 92611 (427)
+          930-5255
         </p>
         <div class="font-rale font-size-14">
           <a href="#" class="px-3 border-right border-left text-dark">Login</a>
@@ -54,7 +54,7 @@
 
       <!-- Primary Navigation -->
       <nav class="navbar navbar-expand-lg navbar-dark color-second-bg">
-        <a class="navbar-brand" href="#">Mobile Ki Dukaan</a>
+        <a class="navbar-brand" href="#">Mobile Shopee</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -105,22 +105,24 @@
     </header>
     <!-- !start #header -->
 
+    <!-- start #main-site -->
     <main id="main-site">
       <!-- Owl-carousel -->
       <section id="banner-area">
         <div class="owl-carousel owl-theme">
           <div class="item">
-            <img src="./assets/Banner1.png" alt="Banner1" />
+            <img src="../assets/Banner1.png" alt="Banner1" />
           </div>
           <div class="item">
-            <img src="./assets/Banner2.png" alt="Banner2" />
+            <img src="../assets/Banner2.png" alt="Banner2" />
           </div>
           <div class="item">
-            <img src="./assets/Banner1.png" alt="Banner3" />
+            <img src="../assets/Banner1.png" alt="Banner3" />
           </div>
         </div>
       </section>
       <!-- !Owl-carousel -->
+
       <!-- Top Sale -->
       <section id="top-sale">
         <div class="container py-5">
@@ -132,7 +134,7 @@
               <div class="product font-rale">
                 <a href="#"
                   ><img
-                    src="./assets/products/1.png"
+                    src="../assets/products/1.png"
                     alt="product1"
                     class="img-fluid"
                 /></a>
@@ -158,7 +160,7 @@
               <div class="product font-rale">
                 <a href="#"
                   ><img
-                    src="./assets/products/2.png"
+                    src="../assets/products/2.png"
                     alt="product1"
                     class="img-fluid"
                 /></a>
@@ -184,7 +186,7 @@
               <div class="product font-rale">
                 <a href="#"
                   ><img
-                    src="./assets/products/3.png"
+                    src="../assets/products/3.png"
                     alt="product1"
                     class="img-fluid"
                 /></a>
@@ -210,7 +212,7 @@
               <div class="product font-rale">
                 <a href="#"
                   ><img
-                    src="./assets/products/6.png"
+                    src="../assets/products/6.png"
                     alt="product1"
                     class="img-fluid"
                 /></a>
@@ -236,7 +238,7 @@
               <div class="product font-rale">
                 <a href="#"
                   ><img
-                    src="./assets/products/1.png"
+                    src="../assets/products/1.png"
                     alt="product1"
                     class="img-fluid"
                 /></a>
@@ -263,7 +265,7 @@
                 <div class="d-flex flex-column">
                   <a href="#"
                     ><img
-                      src="./assets/products/1.png"
+                      src="../assets/products/1.png"
                       class="img-fluid"
                       alt="pro1"
                   /></a>
@@ -291,7 +293,7 @@
                 <div class="d-flex flex-column">
                   <a href="#"
                     ><img
-                      src="./assets/products/2.png"
+                      src="../assets/products/2.png"
                       class="img-fluid"
                       alt="pro1"
                   /></a>
@@ -319,6 +321,7 @@
         </div>
       </section>
       <!-- !Top Sale -->
+
       <!-- Special Price -->
       <section id="special-price">
         <div class="container">
@@ -339,7 +342,7 @@
                 <div class="product font-rale">
                   <a href="#"
                     ><img
-                      src="./assets/products/13.png"
+                      src="../assets/products/13.png"
                       alt="product1"
                       class="img-fluid"
                   /></a>
@@ -367,7 +370,7 @@
                 <div class="product font-rale">
                   <a href="#"
                     ><img
-                      src="./assets/products/11.png"
+                      src="../assets/products/11.png"
                       alt="product1"
                       class="img-fluid"
                   /></a>
@@ -395,7 +398,7 @@
                 <div class="product font-rale">
                   <a href="#"
                     ><img
-                      src="./assets/products/3.png"
+                      src="../assets/products/3.png"
                       alt="product1"
                       class="img-fluid"
                   /></a>
@@ -423,7 +426,7 @@
                 <div class="product font-rale">
                   <a href="#"
                     ><img
-                      src="./assets/products/14.png"
+                      src="../assets/products/14.png"
                       alt="product1"
                       class="img-fluid"
                   /></a>
@@ -451,7 +454,7 @@
                 <div class="product font-rale">
                   <a href="#"
                     ><img
-                      src="./assets/products/12.png"
+                      src="../assets/products/12.png"
                       alt="product1"
                       class="img-fluid"
                   /></a>
@@ -480,7 +483,7 @@
                   <div class="d-flex flex-column">
                     <a href="#"
                       ><img
-                        src="./assets/products/4.png"
+                        src="../assets/products/4.png"
                         class="img-fluid"
                         alt="pro1"
                     /></a>
@@ -513,7 +516,7 @@
                   <div class="d-flex flex-column">
                     <a href="#"
                       ><img
-                        src="./assets/products/5.png"
+                        src="../assets/products/5.png"
                         class="img-fluid"
                         alt="pro1"
                     /></a>
@@ -546,7 +549,7 @@
                   <div class="d-flex flex-column">
                     <a href="#"
                       ><img
-                        src="./assets/products/6.png"
+                        src="../assets/products/6.png"
                         class="img-fluid"
                         alt="pro1"
                     /></a>
@@ -579,7 +582,7 @@
                   <div class="d-flex flex-column">
                     <a href="#"
                       ><img
-                        src="./assets/products/10.png"
+                        src="../assets/products/10.png"
                         class="img-fluid"
                         alt="pro1"
                     /></a>
@@ -612,7 +615,7 @@
                   <div class="d-flex flex-column">
                     <a href="#"
                       ><img
-                        src="./assets/products/13.png"
+                        src="../assets/products/13.png"
                         class="img-fluid"
                         alt="pro1"
                     /></a>
@@ -643,16 +646,17 @@
         </div>
       </section>
       <!-- !Special Price -->
+
       <!-- Banner Ads  -->
       <section id="banner_adds">
         <div class="container py-5 text-center">
           <img
-            src="./assets/banner1-cr-500x150.jpg"
+            src="../assets/banner1-cr-500x150.jpg"
             alt="banner1"
             class="img-fluid"
           />
           <img
-            src="./assets/banner2-cr-500x150.jpg"
+            src="../assets/banner2-cr-500x150.jpg"
             alt="banner1"
             class="img-fluid"
           />
@@ -672,7 +676,7 @@
               <div class="product font-rale">
                 <a href="#"
                   ><img
-                    src="./assets/products/1.png"
+                    src="../assets/products/1.png"
                     alt="product1"
                     class="img-fluid"
                 /></a>
@@ -698,7 +702,7 @@
               <div class="product font-rale">
                 <a href="#"
                   ><img
-                    src="./assets/products/2.png"
+                    src="../assets/products/2.png"
                     alt="product1"
                     class="img-fluid"
                 /></a>
@@ -724,7 +728,7 @@
               <div class="product font-rale">
                 <a href="#"
                   ><img
-                    src="./assets/products/3.png"
+                    src="../assets/products/3.png"
                     alt="product1"
                     class="img-fluid"
                 /></a>
@@ -750,7 +754,7 @@
               <div class="product font-rale">
                 <a href="#"
                   ><img
-                    src="./assets/products/6.png"
+                    src="../assets/products/6.png"
                     alt="product1"
                     class="img-fluid"
                 /></a>
@@ -776,7 +780,7 @@
               <div class="product font-rale">
                 <a href="#"
                   ><img
-                    src="./assets/products/1.png"
+                    src="../assets/products/1.png"
                     alt="product1"
                     class="img-fluid"
                 /></a>
@@ -803,7 +807,7 @@
                 <div class="d-flex flex-column">
                   <a href="#"
                     ><img
-                      src="./assets/products/1.png"
+                      src="../assets/products/1.png"
                       class="img-fluid"
                       alt="pro1"
                   /></a>
@@ -831,7 +835,7 @@
                 <div class="d-flex flex-column">
                   <a href="#"
                     ><img
-                      src="./assets/products/2.png"
+                      src="../assets/products/2.png"
                       class="img-fluid"
                       alt="pro1"
                   /></a>
@@ -859,6 +863,7 @@
         </div>
       </section>
       <!-- !New Phones -->
+
       <!-- Blogs -->
       <section id="blogs">
         <div class="container py-4">
@@ -870,7 +875,7 @@
               <div class="card border-0 font-rale mr-5" style="width: 18rem">
                 <h5 class="card-title font-size-16">Upcoming Mobiles</h5>
                 <img
-                  src="./assets/blog/blog1.jpg"
+                  src="../assets/blog/blog1.jpg"
                   alt="cart image"
                   class="card-img-top"
                 />
@@ -886,7 +891,7 @@
               <div class="card border-0 font-rale mr-5" style="width: 18rem">
                 <h5 class="card-title font-size-16">Upcoming Mobiles</h5>
                 <img
-                  src="./assets/blog/blog2.jpg"
+                  src="../assets/blog/blog2.jpg"
                   alt="cart image"
                   class="card-img-top"
                 />
@@ -902,7 +907,7 @@
               <div class="card border-0 font-rale mr-5" style="width: 18rem">
                 <h5 class="card-title font-size-16">Upcoming Mobiles</h5>
                 <img
-                  src="./assets/blog/blog3.jpg"
+                  src="../assets/blog/blog3.jpg"
                   alt="cart image"
                   class="card-img-top"
                 />
@@ -1021,6 +1026,6 @@
     ></script>
 
     <!-- Custom Javascript -->
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
