--- a/HTML Templete/index.html
+++ b/HTML Templete/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mobile Shopee</title>
+    <title>Mobile Ki Dukaan</title>
 
     <!-- Bootstrap CDN -->
     <link
@@ -43,8 +43,8 @@
     <header id="header">
       <div class="strip d-flex justify-content-between px-4 py-1 bg-light">
         <p class="font-rale font-size-12 text-black-50 m-0">
-          Jordan Calderon 430-985 Eleifend St. Duluth Washington 92611 (427)
-          930-5255
+          Shop No. 420, Meena Bazaar, Jama Masjid, Chandni Chowk, New Delhi,
+          Delhi 110006
         </p>
         <div class="font-rale font-size-14">
           <a href="#" class="px-3 border-right border-left text-dark">Login</a>
@@ -54,7 +54,7 @@
 
       <!-- Primary Navigation -->
       <nav class="navbar navbar-expand-lg navbar-dark color-second-bg">
-        <a class="navbar-brand" href="#">Mobile Shopee</a>
+        <a class="navbar-brand" href="#">Mobile Ki Dukaan</a>
         <button
           class="navbar-toggler"
           type="button"
